cmake_minimum_required(VERSION 3.27)

project(native CXX)

set(CMAKE_CXX_STANDARD 17)

set(LIBRARIES_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/libs)

# HIGHWAY LIB PROJECT
set(HIGHWAY_LIB_DIRECTORY ${LIBRARIES_DIRECTORY}/highway)
set(HWY_ENABLE_CONTRIB OFF)
set(HWY_ENABLE_EXAMPLES OFF)
set(HWY_ENABLE_INSTALL OFF)
set(HWY_ENABLE_TESTS OFF)
add_subdirectory(${HIGHWAY_LIB_DIRECTORY})

add_subdirectory(src)
